--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@ class="flex flex-col flex-grow w-full overflow-hidden  lg:flex-row sm:mx-auto  b
             <div x-data="{ show: false }" class="relative overflow-hidden border-b border-yellow-100 select-none">
                 <h3                 
                 @click="show=!show" class=" text-center flex items-center justify-between px-2 text-xl font-medium text-yellow-900  cursor-pointer sm:text-xl md:text-2xl py-7 hover:text-yellow-400  lg:text-left">
-                    <span class = "flex text-left lg:text-left">What is the best way to get a quote?</span>
+                    <span class = "flex text-left lg:text-left">What is the best way to get an estimate?</span>
                     <svg class="w-6 h-6 mr-2 transition-all duration-200 ease-out transform rotate-0" :class="{ '-rotate-180' : show }" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
                 </h3>
                 <p  class="px-2 pt-0 -mt-2  sm:text-lg py-7 text-yellow-900 text-center lg:text-left"
